--- a/src/app/component/geojson/geojson.component.scss
+++ b/src/app/component/geojson/geojson.component.scss
@@ -5,15 +5,15 @@
 
 .custom-popup {
   position: absolute;
-  bottom: 20px;
-  left: 20px;
-  background: #ffffff;
+  top: 20px;
+  right: 20px;
+  background: white;
   padding: 12px;
-  width: 280px;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-  font-size: 14px;
+  border-radius: 6px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  z-index: 10;
 }
+
 
 .custom-popup h3 {
   margin-top: 0;
