olt-ond-mdu-POC-17/02

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,3 +1,6 @@
-<a routerLink="/geojson">GeoJSON</a> |
-<a routerLink="/pushpin">Pushpin</a> |
-<a routerLink="/custom-cluster">Cluster</a>
+<nav class="map"> 
+<a routerLink="/geojson">GeoJSON</a> 
+<a routerLink="/pushpin">Pushpin</a> 
+<a routerLink="/custom-cluster">Cluster</a> 
+<a routerLink="/olt-ont-mdu">OLT/ONT/MDU</a>
+</nav>
